Added function if file exists then replace it

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,14 @@
                 "miDebuggerPath": "gdb.exe",
                 "program": "${workspaceFolder}/output/main.exe"
             },
-            "preLaunchTask": "build"
+            "preLaunchTask": "build",
+            "setupCommands": [
+              {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+              }
+            ]
         }
     ]
 }
